modified:   chinese/.DS_Store modified:   chinese/jogano.css modified:   events.html modified:   jogano.css modified:   product/chinese/jogano.css modified:   product/jogano.css modified:   products.html

--- a/events.html
+++ b/events.html
@@ -57,7 +57,7 @@
 <div class="event-detail">
   Raise your glass and celebrate Christmas. Enjoy an evening with us while tasting wonderful wine and experiencing tasty tapas.
 </div>
-<a href="" class="event-join">Click to join</a>
+<div class="event-join">Past</div>
 </div>
 
 
