--- a/products.html
+++ b/products.html
@@ -139,8 +139,7 @@
           <input type="checkbox" value="red">
           <span class="checkboxParts">Red</span>
         </label>
-<br>
-
+&#160;&#160;&#160;&#160;&#160;&#160;
 <label>
           <input type="checkbox" value="white">
           <span class="checkboxParts">White</span>
@@ -152,14 +151,14 @@
 
   <label>
           <input type="checkbox" value="p0">
-          <span class="checkboxParts lato">¥&#160;&#160;&#160;&#160;&#160;&#160;&#160;0 - 350</span>
+          <span class="checkboxParts lato">¥0 - 350</span>
         </label>
 
-        <br>
+       &#160;&#160;&#160;&#160;&#160;&#160;
 
          <label>
           <input type="checkbox" value="p350">
-          <span class="checkboxParts lato">¥ &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; >350</span>
+          <span class="checkboxParts lato">¥  >350</span>
         </label>
             
   <h2>REGION</h2>
@@ -169,7 +168,7 @@
           <span class="checkboxParts">Burgendy</span>
         </label>
 
-        <br>
+      &#160;&#160;&#160;&#160;&#160;&#160;
 
     <label>
           <input type="checkbox" value="bordeaux">
@@ -182,7 +181,7 @@
           <input type="checkbox" value="cahors">
           <span class="checkboxParts">Cahors</span>
         </label>
-
+      &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
  <label>
           <input type="checkbox" value="loire">
           <span class="checkboxParts">Loire valley</span>
@@ -195,16 +194,16 @@
           <input type="checkbox" value="light">
           <span class="checkboxParts">Light</span>
         </label>
-<br>
+&#160;&#160;&#160;&#160;&#160;
   <label>
           <input type="checkbox" value="medium">
           <span class="checkboxParts">Medium</span>
         </label>
 
-        <br>
+   &#160;&#160;&#160;&#160;&#160;
           <label>
           <input type="checkbox" value="high">
-          <span class="checkboxParts">High</span>
+          <span class="checkboxParts">Full</span>
         </label>
 </div>
 
@@ -344,6 +343,7 @@
 <div class="pricee">¥ 299</div>
 <img src="https://wangx733.github.io/jogano/1-products/14-badon.png" class="image" >
 <h1>Chateau  Bardon la Garelle  </h1>
+<br>
 <div class="introo">
   <h3 class="lato">13.5%</h3>
   <h3>Blend</h3>
@@ -368,6 +368,7 @@
 <div class="pricee">¥ 218</div>
 <img src="https://wangx733.github.io/jogano/1-products/19-beauregard.png" class="image" >
 <h1>Ch. Beauregard Ducasse blanc2011 </h1>
+<br>
 <div class="introo">
   <h3 class="lato">12.5%</h3>
   <h3>Blend</h3>
@@ -379,6 +380,7 @@
 <div class="pricee">¥ 218</div>
 <img src="https://wangx733.github.io/jogano/1-products/20-ducasse.png" class="image" >
 <h1>Chateau Beauregard Ducasse2010 </h1>
+<br>
 <div class="introo">
   <h3 class="lato">13.0%</h3>
   <h3>Blend</h3>
@@ -426,6 +428,7 @@
 <div class="pricee">¥ 189</div>
 <img src="https://wangx733.github.io/jogano/1-products/21-Croix12.png" class="image" >
 <h1>Chateau La Coix Calendreau </h1>
+<br>
 <div class="introo">
   <h3 class="lato">14.0%</h3>
   <h3>Blend</h3>
@@ -437,6 +440,7 @@
 <div class="pricee">¥ 109</div>
 <img src="https://wangx733.github.io/jogano/1-products/23-luchey.png" class="image" >
 <h1>Chateau Tour de Luchey </h1>
+<br>
 <div class="introo">
   <h3 class="lato">13.0%</h3>
   <h3>Blend</h3>
@@ -447,11 +451,12 @@
 <a href="https://wangx733.github.io/jogano/product/31.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 680</div>
-<img src="https://wangx733.github.io/jogano/1-products/31-meursault-b.png" class="image" >
-r<h1>Sylvain LoichetMeusault </h1>
+<img src="https://wangx733.github.io/jogano/1-products/31-meursault.png" class="image" >
+<h1>Sylvain LoichetMeusault </h1>
+<br>
 <div class="introo">
   <h3 class="lato">13.5%</h3>
-  <h3>Chardonny</h3>
+  <h3>Chardony</h3>
   <h3>Burgendy</h3>
 </div>
 </a>
@@ -461,9 +466,10 @@ r<h1>Sylvain LoichetMeusault </h1>
 <div class="pricee">¥ 399</div>
 <img src="https://wangx733.github.io/jogano/1-products/29-morey10.png" class="image" >
 <h1>Domaine Pierre Amiot et fils Morey Saint Denis </h1>
+<br>
 <div class="introo">
   <h3 class="lato">13.5%</h3>
-  <h3>Pinot Noir</h3>
+  <h3>PinotNoir</h3>
   <h3>Burgendy</h3>
 </div>
 </a>
@@ -474,6 +480,7 @@ r<h1>Sylvain LoichetMeusault </h1>
 <div class="pricee">¥ 448</div>
 <img src="https://wangx733.github.io/jogano/1-products/30-asint-aubin.png" class="image" >
 <h1>Sylvain Loichet Saint-Aubin 1er Cru </h1>
+<br>
 <div class="introo">
   <h3 class="lato">13.5%</h3>
   <h3>merlot</h3>
@@ -505,7 +512,6 @@ r<h1>Sylvain LoichetMeusault </h1>
 </div>
 
 </div>
-
 
 
 <script type="text/javascript" src="https://wangx733.github.io/jogano/jquery-3.1.1.js"></script>
