modified:   product/10.html modified:   product/11.html modified:   product/13.html modified:   product/14.html modified:   product/19.html modified:   product/2.html modified:   product/20.html modified:   product/22.html modified:   product/23.html modified:   product/24.html modified:   product/30.html modified:   product/4.html modified:   product/47.html modified:   product/7.html modified:   product/8.html modified:   product/9.html

--- a/product/10.html
+++ b/product/10.html
@@ -69,7 +69,7 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Cahors AOC
+        Cahors
 </div>
 <br>
 	
@@ -88,7 +88,7 @@ Its colour is dark cherry red. Its nose is typical of the Malbec variety with no
 </div>
 
 <div class="dis-grapecompo">
-  Merlot<br>
+Merlot<br>
 Malbec<br>
 </div>
 </div>
