--- a/product/19.html
+++ b/product/19.html
@@ -69,12 +69,12 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        AOC White Graves</div>
+         Mazères parish</div>
 <br>
 	
 	<div class="dis-pair-description">
 		<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-foodpair.png">
-	 grilled  fish
+	 grilled,fish
 		<div class="dis-notes">
 	<h2>Notes</h2>
 “This dry white wine is fresh with fruity aromas. The mouth develops aromas of pineapple, citrus and white  owers thanks to the Sauvignon. In the mouth, you can notice a very nice sensation of freshness and roundness. The Semillon brings a little of complexity and  eshy to this great vintage.” Jacques Perromat.
