--- a/product/20.html
+++ b/product/20.html
@@ -70,7 +70,7 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-     AOC Red Graves</div>
+     Mazères</div>
 <br>
 	
 	<div class="dis-pair-description">
@@ -88,7 +88,7 @@
 </div>
 
 <div class="dis-grapecompo">
-Merlo<br>
+Merlot<br>
  Cabernet Sauvignon<br>
   Cabernet Franc
 </div>
