--- a/product/23.html
+++ b/product/23.html
@@ -79,7 +79,7 @@
 		<div class="dis-notes">
 	<h2>Notes</h2>
 A well-balanced luscious, round and supple wine with loads of fresh red fruits 
-And ripe tannins
+And ripe tannins.
 <br><br><br><br>
 
 
