--- a/product/24.html
+++ b/product/24.html
@@ -69,7 +69,7 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Pessac-Léognan white
+       Cotes de Bordeaux 
 </div>
 <br>
 	
