--- a/product/4.html
+++ b/product/4.html
@@ -70,7 +70,7 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Pomerol 
+Pomerol 
 </div>
 <br>
 	
@@ -80,7 +80,7 @@ Beef and Venison
 		<div class="dis-notes">
 	<h2>Notes</h2>
 This shows typical levels of interest for wines from Saint-Emilion，Mature red & black fruit
-In the mouth, soft attack, tight tannins. Good balance
+In the mouth, soft attack, tight tannins. Good balance.
 <br><br><br><br>
 
 
@@ -90,7 +90,7 @@ In the mouth, soft attack, tight tannins. Good balance
 </div>
 
 <div class="dis-grapecompo">
-	Merlot<br>
+Merlot<br>
 Cabernet Sauvignon<br>
 CabernetFranc
 </div>
