--- a/product/47.html
+++ b/product/47.html
@@ -76,7 +76,7 @@
 	grilled meats, casseroles and cheeses 
 		<div class="dis-notes">
 	<h2>Notes</h2>
-Very supple wine with a good body and a lot of fruit
+Very supple wine with a good body and a lot of fruits.
 <br><br><br><br>
 
 
