--- a/product/7.html
+++ b/product/7.html
@@ -70,7 +70,7 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Pomerol 
+Pomerol 
 </div>
 <br>
 	
@@ -79,7 +79,7 @@
 Beef and Venison 
 		<div class="dis-notes">
 	<h2>Notes</h2>
-A lustrous, pale yellow colour; dense foam; fine bubbles. A fresh, sweet-pastry bouquet with notes of hazelnut and candied fruits (apricot and peach). Very harmonious, with excellent fusion of acidity and sweetness that leaves a distinctly fresh impression. Impressive length on the palate as a fruitiness and notes of hazelnut slowly emerge
+A lustrous, pale yellow colour; dense foam; fine bubbles. A fresh, sweet-pastry bouquet with notes of hazelnut and candied fruits (apricot and peach). Very harmonious, with excellent fusion of acidity and sweetness that leaves a distinctly fresh impression. Impressive length on the palate as a fruitiness and notes of hazelnut slowly emerge.
 <br><br><br><br>
 
 
@@ -89,7 +89,7 @@ A lustrous, pale yellow colour; dense foam; fine bubbles. A fresh, sweet-pastry 
 </div>
 
 <div class="dis-grapecompo">
-	Merlot<br>
+Merlot<br>
 Cabernet Sauvignon<br>
 CabernetFranc
 </div>
