--- a/product/9.html
+++ b/product/9.html
@@ -70,7 +70,7 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Cahors AOC
+        Cahors
 </div>
 <br>
 	
@@ -90,7 +90,7 @@ Lovely brilliant color of dark red. Very fine nose. In mouth it shows its soft t
 </div>
 
 <div class="dis-grapecompo">
-	Merlot<br>
+Merlot<br>
 Malbec<br>
 </div>
 </div>
