--- a/product/11.html
+++ b/product/11.html
@@ -69,7 +69,7 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-     Cahors AOC
+     Cahors
 </div>
 <br>
 	
