--- a/product/14.html
+++ b/product/14.html
@@ -80,7 +80,7 @@ Beef and Venison
 		<div class="dis-notes">
 	<h2>Notes</h2>
 This shows typical levels of interest for wines from Saint-Emilion，Mature red & black fruit
-In the mouth, soft attack, tight tannins. Good balance
+In the mouth, soft attack, tight tannins. Good balanced.
 <br><br><br><br>
 
 
@@ -90,7 +90,7 @@ In the mouth, soft attack, tight tannins. Good balance
 </div>
 
 <div class="dis-grapecompo">
-	Merlot<br>
+Merlot<br>
 Cabernet Sauvignon<br>
 CabernetFranc
 </div>
