--- a/product/22.html
+++ b/product/22.html
@@ -69,7 +69,7 @@
 	
     <div class="dis-region-description">
     	<img class="dis-icon" src="https://wangx733.github.io/jogano/icon-region.png">
-        Bordeaux, Haut-Medoc
+       Haut-Medoc, Bordeaux
 </div>
 <br>
 	
