--- a/product/30.html
+++ b/product/30.html
@@ -78,7 +78,7 @@ n/a
 		<div class="dis-notes">
 	<h2>Notes</h2>
 This shows typical levels of interest for wines from Saint-Emilion，Mature red & black fruit
-In the mouth, soft attack, tight tannins. Good balance
+In the mouth, soft attack, tight tannins. Good balance.
 <br><br><br><br>
 
 
