modified:   chinese/jogano.css modified:   chinese/products.html modified:   jogano.css modified:   products.html

--- a/chinese/products.html
+++ b/chinese/products.html
@@ -104,7 +104,7 @@
           <input type="checkbox" value="cahors">
           <span class="checkboxParts">卡尔侯</span>
         </label>
-
+        <br>
  <label>
           <input type="checkbox" value="loire">
           <span class="checkboxParts">Loire valley</span>
@@ -139,8 +139,7 @@
           <input type="checkbox" value="red">
           <span class="checkboxParts">红葡萄酒</span>
         </label>
-<br>
-
+&#160;&#160;&#160;&#160;&#160;&#160;
 <label>
           <input type="checkbox" value="white">
           <span class="checkboxParts">白葡萄酒</span>
@@ -152,14 +151,13 @@
 
   <label>
           <input type="checkbox" value="p0">
-          <span class="checkboxParts lato">¥&#160;&#160;&#160;&#160;&#160;&#160;&#160;0 - 350</span>
+          <span class="checkboxParts lato">¥0 - 350</span>
         </label>
 
-        <br>
-
+&#160;&#160;&#160;&#160;&#160;&#160;
          <label>
           <input type="checkbox" value="p350">
-          <span class="checkboxParts lato">¥ &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; >350</span>
+          <span class="checkboxParts lato">¥>350</span>
         </label>
             
   <h2>产区</h2>
@@ -169,8 +167,7 @@
           <span class="checkboxParts">勃艮第</span>
         </label>
 
-        <br>
-
+      &#160;&#160;&#160;&#160;&#160;&#160;
     <label>
           <input type="checkbox" value="bordeaux">
           <span class="checkboxParts">波尔多</span>
@@ -182,7 +179,7 @@
           <input type="checkbox" value="cahors">
           <span class="checkboxParts">卡尔</span>
         </label>
-
+&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
  <label>
           <input type="checkbox" value="loire">
           <span class="checkboxParts">卢瓦尔</span>
@@ -195,13 +192,13 @@
           <input type="checkbox" value="light">
           <span class="checkboxParts">轻酒体</span>
         </label>
-<br>
+&#160;&#160;&#160;
   <label>
           <input type="checkbox" value="medium">
           <span class="checkboxParts">中酒体</span>
         </label>
 
-        <br>
+   &#160;&#160;&#160;
           <label>
           <input type="checkbox" value="high">
           <span class="checkboxParts">重酒体</span>
