--- a/products.html
+++ b/products.html
@@ -104,7 +104,7 @@
           <input type="checkbox" value="cahors">
           <span class="checkboxParts">Cahors</span>
         </label>
-
+        <br>
  <label>
           <input type="checkbox" value="loire">
           <span class="checkboxParts">Loire valley</span>
@@ -343,7 +343,6 @@
 <div class="pricee">¥ 299</div>
 <img src="https://wangx733.github.io/jogano/1-products/14-badon.png" class="image" >
 <h1>Chateau  Bardon la Garelle  </h1>
-<br>
 <div class="introo">
   <h3 class="lato">13.5%</h3>
   <h3>Blend</h3>
@@ -368,7 +367,6 @@
 <div class="pricee">¥ 218</div>
 <img src="https://wangx733.github.io/jogano/1-products/19-beauregard.png" class="image" >
 <h1>Ch. Beauregard Ducasse blanc2011 </h1>
-<br>
 <div class="introo">
   <h3 class="lato">12.5%</h3>
   <h3>Blend</h3>
@@ -380,7 +378,6 @@
 <div class="pricee">¥ 218</div>
 <img src="https://wangx733.github.io/jogano/1-products/20-ducasse.png" class="image" >
 <h1>Chateau Beauregard Ducasse2010 </h1>
-<br>
 <div class="introo">
   <h3 class="lato">13.0%</h3>
   <h3>Blend</h3>
@@ -428,7 +425,6 @@
 <div class="pricee">¥ 189</div>
 <img src="https://wangx733.github.io/jogano/1-products/21-Croix12.png" class="image" >
 <h1>Chateau La Coix Calendreau </h1>
-<br>
 <div class="introo">
   <h3 class="lato">14.0%</h3>
   <h3>Blend</h3>
@@ -440,7 +436,6 @@
 <div class="pricee">¥ 109</div>
 <img src="https://wangx733.github.io/jogano/1-products/23-luchey.png" class="image" >
 <h1>Chateau Tour de Luchey </h1>
-<br>
 <div class="introo">
   <h3 class="lato">13.0%</h3>
   <h3>Blend</h3>
@@ -453,7 +448,6 @@
 <div class="pricee">¥ 680</div>
 <img src="https://wangx733.github.io/jogano/1-products/31-meursault.png" class="image" >
 <h1>Sylvain LoichetMeusault </h1>
-<br>
 <div class="introo">
   <h3 class="lato">13.5%</h3>
   <h3>Chardony</h3>
@@ -465,8 +459,8 @@
   <div class="redwine"></div>
 <div class="pricee">¥ 399</div>
 <img src="https://wangx733.github.io/jogano/1-products/29-morey10.png" class="image" >
-<h1>Domaine Pierre Amiot et fils Morey Saint Denis </h1>
-<br>
+<h1>Morey Saint Denis </h1>
+
 <div class="introo">
   <h3 class="lato">13.5%</h3>
   <h3>PinotNoir</h3>
@@ -480,10 +474,9 @@
 <div class="pricee">¥ 448</div>
 <img src="https://wangx733.github.io/jogano/1-products/30-asint-aubin.png" class="image" >
 <h1>Sylvain Loichet Saint-Aubin 1er Cru </h1>
-<br>
 <div class="introo">
   <h3 class="lato">13.5%</h3>
-  <h3>merlot</h3>
+  <h3>Merlot</h3>
   <h3>Burgendy</h3>
 </div>
 </a>
