modified:   chinese/About.html modified:   chinese/home.html modified:   products.html

--- a/chinese/home.html
+++ b/chinese/home.html
@@ -26,7 +26,7 @@
       </a>
       <a href="https://wangx733.github.io/jogano/home.html" class="en lang">En</a>
       <div class="gang lang">|</div>
-      <a href="https://wangx733.github.io/jogano/chinese/product.html" class="cn lang">中文</a>
+      <a href="https://wangx733.github.io/jogano/chinese/home.html" class="cn lang">中文</a>
 </div>
 
 
@@ -41,7 +41,7 @@
       </a>
       <a href="https://wangx733.github.io/jogano/home.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
-      <a href="https://wangx733.github.io/jogano/chinese/product.html" class="cn lang2">中文</a>
+      <a href="https://wangx733.github.io/jogano/chinese/home.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
 	</div>
 
